fix header spacing

--- a/media/style.css
+++ b/media/style.css
@@ -107,7 +107,7 @@ body.grid {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: "Helvetica Neue", Helvetica, sans-serif;
-    margin: 30px 0;
+    margin: 20px 0;
 }
 
 section, header {
@@ -147,10 +147,7 @@ article header h1 + .byline {
 }
 
 article h2 {
-    line-height: 22px;
     font-size: 22px;
-    margin-bottom: 8px;
-    margin-top: 12px;
 }
 
 /** Links **/
